<resources>
    <string name="app_name">memer</string>
    <string name="share">share</string>
    <string name="next">Next</string>
    <string name="todo">TODO</string>
    <string name="truemerer">Truemerer</string>
    <string name="icon">icon</string>
    <string name="splashicon">splashicon</string>
    <string name="made_with">Made With Love💕</string>
    <string name="tod">TODO</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="register1">Sign Up</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? sign up</string>
    <string name="email">Email</string>
    <string name="login2">Login</string>
    <string name="have_an_account_login">have an account?Login</string>
</resources>